--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<router-outlet></router-outlet>
+<div style="margin-top: 50px;">
+  <router-outlet></router-outlet>
+
+</div>
+
 
 <shared-menu></shared-menu>
