--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -1,8 +1,5 @@
-
-
-<div class="card flex justify-content-center " style="margin-top: 50px;">
+<div class="card flex justify-content-center ">
   <p-menubar [model]="menuItems">
     <img src="./favicon.ico" height="40" class="mr-2" />
   </p-menubar>
 </div>
- 
