pipes, comunes , numeros, no comunes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<div style="margin-top: 50px;">
-  <router-outlet></router-outlet>
+<div style="margin-top: 4%;">
+  <shared-menu></shared-menu>
 
 </div>
 
+<div style="margin-top: 4px;">
+  <router-outlet></router-outlet>
 
-<shared-menu></shared-menu>
+</div>
