--- a/src/app/products/pages/numbers-page/numbers-page.component.html
+++ b/src/app/products/pages/numbers-page/numbers-page.component.html
@@ -1,1 +1,26 @@
-<p>numbers-page works!</p>
+<p-panel header="Pipes Númericos" class="p-1">
+  <h1> Pipes Básicos </h1>
+  <p>
+    pipes incluídos en Angular - Usualmente en el Common Module
+  </p>
+</p-panel>
+<!-- primeFlex -->
+<div class="grid mt-2">
+  <div class="col-12 md:col-4">
+    <p-card header="ventas Netas" subheader="del precente año">
+      {{totalSells + 12345 | number:'1.2-2' }}
+    </p-card>
+  </div>
+
+  <div class="col-12 md:col-4">
+    <p-card header="ventas Brutas" subheader="del precente año">
+      {{totalSells | currency:'HNL':'symbol-narrow':'1.6-6' }}
+    </p-card>
+  </div>
+
+  <div class="col-12 md:col-4">
+    <p-card header="Ganancia porcentual" subheader="del precente año">
+      {{ percent | percent:'1.2-2' }}
+    </p-card>
+  </div>
+</div>
