--- a/src/app/products/pages/uncommon-page/uncommon-page.component.html
+++ b/src/app/products/pages/uncommon-page/uncommon-page.component.html
@@ -1,1 +1,83 @@
-<p>uncommon-page works!</p>
+<p-panel header="Pipes no tan Comunes" class="p-1">
+  <h1> Pipes Básicos </h1>
+  <p>
+    pipes incluídos en Angular - Usualmente en el Common Module
+  </p>
+</p-panel>
+<!-- primeFlex -->
+<div class="grid mt-2">
+  <div class="col-12 md:col-6">
+    <p-fieldset legend="i18nSelect Pipe" [toggleable]="true">
+      <p>Saludos {{ name }}, es un placer {{ gender | i18nSelect:invitationMap }} a nuestro envento.</p>
+      <p-button (click)="changeClient()" label="Cambiar persona">
+
+      </p-button>
+    </p-fieldset>
+  </div>
+
+  <div class="col-12 md:col-6">
+    <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
+      <p>
+        Actualmente {{clients.length | i18nPlural:clientsMap}}
+      </p>
+      <p-button (click)="deletClient()" label="Borrar cliente"></p-button>
+    </p-fieldset>
+  </div>
+
+  <div class="col-12 md:col-6">
+    <p-fieldset legend="Slice Pipe" [toggleable]="true">
+      <b>Original</b>
+      <pre>{{clients}}</pre>
+      <b>sliice:0:2</b>
+      <pre>{{ clients | slice:0:2}}</pre>
+      <b>sliice:0:1</b>
+      <pre>{{ clients | slice:0:1}}</pre>
+      <b>sliice:2:3</b>
+      <pre>{{ clients | slice:2:3}}</pre>
+      <b>sliice:0:-1</b>
+      <pre>{{ clients | slice:0:-1}}</pre>
+      <b>sliice:0:-3</b>
+      <pre>{{ clients | slice:0:-3}}</pre>
+    </p-fieldset>
+  </div>
+
+  <div class="col-12 md:col-6">
+    <p-fieldset legend="Json Pipe" [toggleable]="true">
+      <pre>
+        {{ person | json }}
+      </pre>
+    </p-fieldset>
+  </div>
+
+  <div class="col-12 md:col-6">
+    <p-fieldset legend="KeyValue Pipe" [toggleable]="true">
+      <!-- {{ person }} -->
+      <ul>
+        <li *ngFor="let item of person | keyvalue">
+          <!-- {{item | json}} -->
+          <b>{{item.key | titlecase}}: </b> {{item.value}}
+
+        </li>
+      </ul>
+    </p-fieldset>
+  </div>
+
+  <div class="col-12 md:col-6">
+    <!-- Async nos permite abrir o escuchar un observable o promesa y cuando ya no lo ocupemos lo limpia por mi -->
+    <p-fieldset legend="Async Pipe" [toggleable]="true">
+      <pre>
+      {{myObservableTimer | async}}
+      <!-- {{myObservableTimer | json}} -->
+      </pre>
+      <pre *ngIf="!(myObservableTimer | async)">
+        Resolviendo observable
+      </pre>
+      -----------
+
+      <pre>{{promiseValue | async}}</pre>
+      <pre *ngIf="!(promiseValue | async)">
+        Resolviendo promesa
+      </pre>
+    </p-fieldset>
+  </div>
+</div>
