--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="card flex justify-content-center ">
+<div>
   <p-menubar [model]="menuItems">
     <img src="./favicon.ico" height="40" class="mr-2" />
   </p-menubar>
